--- a/app/src/main/res/drawable/triangle_selecter.xml
+++ b/app/src/main/res/drawable/triangle_selecter.xml
@@ -6,7 +6,7 @@
             android:pivotX="15%"
             android:pivotY="-35%">
             <shape android:shape="rectangle">
-                <solid android:color="@color/colorAccent" />
+                <solid android:color="@color/colorPrimary" />
             </shape>
         </rotate>
     </item>
