--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -13,7 +13,7 @@
             android:id="@+id/tv_msg_title"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:paddingLeft="10dp"
             android:text="登录界面"
@@ -71,7 +71,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
 
@@ -101,7 +101,7 @@
                 android:background="@android:color/transparent"
                 android:gravity="center"
                 android:text="登录"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorPrimary"
                 android:textSize="13sp" />
 
         </LinearLayout>
