--- a/app/src/main/res/layout/layout_popup.xml
+++ b/app/src/main/res/layout/layout_popup.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="300dp"
+    <!-- 宽度 就是dialog的宽度 360dp*0.7= 252dp-->
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="252dp"
         android:layout_height="200dp"
-        android:background="@color/cardview_dark_background"/>
+        android:background="#ffffff"
+        />
 </LinearLayout>
